# libeoi

./: .gitignore  AUTHORS  Makefile.am  configure.ac  eoi.pc.in  libchoicebox.pc.in  libeoi.pc.in
.tx/: config
data/: Makefile.am  eoi_help.ini  eoi_numentry.ini  n516.ini
data/evk/: 1_en.ini  2_ru.ini  3_de.ini  4_pl.ini  5_uk.ini
debian/: changelog  choicebox-eb600.ini  choicebox-n516.ini  choicebox-numbering-eb600.ini  choicebox-numbering-n516.ini  choicebox-numbering-prs505.ini  choicebox-prs505.ini  choicebox-v3.ini  control  eoi-data.install  eoi_help.prs505.ini  eoi_numentry.prs505.ini  evk.eb600.ini  evk.prs505.ini  libeoi-settings-azbooka.dirs  libeoi-settings-azbooka.install  libeoi1.install  libeoi2.install  rules
po/: Makefile.am  POTFILES  it_IT.po  libeoi.pot  pl.po  ro.po  ru.po  uk.po
src/: Makefile.am  eoi.c  eoi_battery.c  eoi_callbacks.c  eoi_clock.c  eoi_dialog.c  eoi_entry.c  eoi_help.c  eoi_numentry.c  eoi_resize.c  eoi_subst.c  eoi_test.c  eoi_textbox.c  eoi_textbox.h  eoi_themes.c  eoi_utils.c  eoi_vk.c  libchoicebox-aux.c  libchoicebox.c  libchoicebox.h  libeoi.c  libeoi.h  libeoi_battery.h  libeoi_clock.h  libeoi_dialog.h  libeoi_entry.h  libeoi_help.h  libeoi_numentry.h  libeoi_textbox.h  libeoi_themes.h  libeoi_utils.h  libeoi_vk.h  teste.c
themes/: Makefile.am  background-azbooka.edc  choicebox.edc  eoi-main-window.edc  eoi.edc  eoi.edj  help.edc  help.edj
themes/azbooka/: Makefile.am  choicebox.edc  eoi-dialog.edc  eoi-entry.edc  eoi-help.edc  eoi-main-window.edc
themes/default/: Makefile.am  choicebox.edc  eoi-dialog.edc  eoi-entry.edc  eoi-help.edc  eoi-main-window.edc
